# sapheneia

./: .env.template  .gitignore  CHANGELOG.md  CLAUDE.md  CODEREVIEW.md  Dockerfile.api  Dockerfile.data  Dockerfile.forecast  Dockerfile.metrics  Dockerfile.metrics-api  Dockerfile.trading  Dockerfile.ui  IMPLEMENTATIONEXECUTION.md  IMPLEMENTATIONPLAN.md  INSTRUCTIONS.md  MODELS.md  PHASE6_TESTING_GUIDE.md  README.md  REFACTORING.md  REMEDIATION_EXECUTION.md  REMEDIATION_PLAN.md  RUNBOOK.md  aleutian_integration_evaluation.md  docker-compose.yml  pyproject.toml  pytest.ini  setup.sh
.claude/: settings.local.json
api/: main.py
api/core/: config.py  metrics.py  security.py
api/models/: __init__.py
api/models/timesfm20/: __init__.py
api/models/timesfm20/routes/: __init__.py
api/models/timesfm20/services/: __init__.py
data/: Dockerfile  go.mod  main.go  main_test.go
docs/: EVALUATION_GUIDE.md  aleutian_technical_analysis.md
forecast/: __init__.py  main.py
forecast/core/: __init__.py  config.py  data.py  exceptions.py  legacy_adapters.py  legacy_schema.py  legacy_service.py  metrics.py  paths.py  rate_limit.py  security.py
forecast/documentation/: API_USAGE.md  ARCHITECTURE.md  DEPLOYMENT.md  EXAMPLES.md  MODEL_REGISTRY.md  QUICK_REFERENCE.md
forecast/models/: __init__.py
forecast/models/chronos/: __init__.py
forecast/models/chronos/routes/: __init__.py  endpoints.py
forecast/models/chronos/schemas/: __init__.py  schema.py
forecast/models/chronos/services/: __init__.py  model.py
forecast/models/timesfm20/documentation/: API_REFERENCE.md  ARCHITECTURE.md  DATA_FORMAT.md  EXAMPLES.md  PARAMETERS.md  USAGE_GUIDE.md
forecast/models/timesfm20/routes/: endpoints.py
forecast/models/timesfm20/schemas/: __init__.py  schema.py
forecast/models/timesfm20/services/: data.py  model.py
forecast/models/timesfm20/tests/: __init__.py
metrics/: README.md  __init__.py  main.py
metrics/core/: __init__.py  config.py  metrics.py
metrics/routes/: __init__.py  endpoints.py
metrics_api/: README.md  main.py
metrics_api/core/: config.py  metrics.py
metrics_api/routes/: endpoints.py
tests/: __init__.py  conftest.py
tests/core/: __init__.py  test_data.py  test_legacy_adapters.py  test_legacy_schema.py  test_legacy_service.py  test_metrics.py  test_paths.py
tests/forecast/: test_endpoints.py
tests/integration/: __init__.py  test_path_handling.py
tests/manual/: inspect_influxdb_results.py  test_inspect_influxdb_results.py
tests/metrics/: __init__.py  conftest.py  test_endpoints.py  test_metrics.py
tests/metrics_api/: conftest.py  test_endpoints.py  test_metrics.py
trading/: __init__.py  main.py
trading/core/: __init__.py  config.py  exceptions.py  rate_limit.py  security.py
trading/documentation/: API_USAGE.md  ARCHITECTURE.md  DEPLOYMENT.md  EXAMPLES.md  QUICK_REFERENCE.md  STRATEGIES.md
trading/routes/: __init__.py  endpoints.py
trading/sample/: example-usage.py  sample-code.py
trading/schemas/: __init__.py  schema.py
trading/services/: __init__.py  trading.py
trading/tests/: __init__.py  conftest.py
trading/tests/integration/: __init__.py  test_authentication.py  test_error_handling.py  test_execute_endpoint.py  test_health_endpoints.py  test_performance.py  test_rate_limiting.py  test_request_id.py  test_schema_validation.py
trading/tests/unit/: __init__.py  test_config.py  test_helpers.py  test_security.py  test_strategy_quantile.py  test_strategy_return.py  test_strategy_threshold.py
ui/: api_client.py  app.py
ui/static/js/: app.js
