[project]
name = "sapheneia"
version = "2.0.0"
description = "Scalable FastAPI application for time series forecasting with TimesFM-2.0 and future models"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Shared Dependencies
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "python-dateutil>=2.8.0",
]

[project.optional-dependencies]
# Forecasting API dependencies
forecasting = [
    "jax>=0.7.0",
    "jaxlib>=0.7.0",
    "torch>=2.0.0",  # Required for TimesFM on Apple Silicon
    "timesfm>=1.3.0",
    "scikit-learn>=1.3.0",
    "matplotlib>=3.10.5",
    "seaborn>=0.13.2",
    "plotly>=5.18.0",
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.6",
    "requests>=2.31.0",
    "slowapi>=0.1.9",
    "jupyter>=1.1.1",
    "notebook>=7.0.0",
    "ipykernel>=6.25.0",
    "ipywidgets>=8.1.0",
]

[project.optional-dependencies]
# Forecasting API dependencies
forecasting = [
    "jax>=0.7.0",
    "jaxlib>=0.7.0",
    "timesfm>=1.3.0",
    "scikit-learn>=1.3.0",
    "matplotlib>=3.10.5",
    "seaborn>=0.13.2",
    "plotly>=5.18.0",
    "python-multipart>=0.0.6",
    "requests>=2.31.0",
    "slowapi>=0.1.9",
    "jupyter>=1.1.1",
    "notebook>=7.0.0",
    "ipykernel>=6.25.0",
    "ipywidgets>=8.1.0",
]

# Metrics API dependencies
metrics = [
    "quantstats>=0.0.62",
]

# UI dependencies
ui = [
    "flask>=3.0.0",
    "werkzeug>=3.0.0",
    "python-magic>=0.4.27",
]
# MLOps dependencies (for Aleutian Local integration)
mlops = [
    "mlflow>=2.10.0",
    "redis>=5.0.0",
]

# Development dependencies
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
]

# All optional dependencies
# Note: Use --all-extras flag with uv sync instead, or install specific extras
# This is kept for compatibility with pip install -e ".[all]"
all = [
    "sapheneia[forecasting,metrics,ui,mlops,dev]",
]

[tool.setuptools]
# Use find to discover all packages under forecast and ui
[tool.setuptools.packages.find]
where = ["."]
include = ["forecast*", "ui*"]
exclude = ["*.tests", "*.tests.*", "tests.*", "tests"]

# Pytest configuration (Phase 6: Testing Infrastructure)
[tool.pytest.ini_options]
testpaths = ["tests", "forecast/models", "trading/tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--cov=forecast",
    "--cov=trading",
    "--cov-report=html",
    "--cov-report=term",
    "--cov-report=xml",
    "--cov-fail-under=35"
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow running tests that take more than a few seconds"
]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning"
]

[tool.coverage.run]
source = ["forecast", "trading", "metrics"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/__init__.py",
    "*/migrations/*"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
    "if False:",
    "if 0:",
    "if.*debug.*:"
]

[tool.setuptools.package-data]
"*" = ["*.md", "*.txt", "*.yml", "*.yaml"]
